[project]
name = "threat-response-platform"
version = "0.1.0"
description = "Post-breach threat attribution and response orchestration beta"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "httpx>=0.28.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
